# goster-backend

./: .env.local  .gitignore  README.md  docker-compose.yml  docx_handler.py  main.py  push.docx  pyproject.toml  qwerty.docx  script.py  section_formatter.py  style_utils.py
assets/: default-numbering.xml
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 2025_12_14_create_file_table.py
src/: main.py
src/api/: processing.py  s3.py
src/api/dependencies/: service.py
src/domain/choices/: __init__.py  status.py
src/domain/models/: __init__.py  file.py
src/service/: s3.py
src/service/old/: old_processing_service.py  style_utils.py
src/settings/: config.py
