[project]
name = "vkr-part"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml (>=6.0.2,<7.0.0)",
    "fastapi (>=0.124.4,<0.125.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "ruff (>=0.14.9,<0.15.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "psycopg-binary (>=3.3.2,<4.0.0)",
    "boto3 (>=1.42.9,<2.0.0)",
    "uuid (>=1.30,<2.0)",
    "alembic (==1.14.1)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
